<resources>
    <string name="app_name">Nirma University MIS</string>
    <string name="title_activity_student_sign_in">Student Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_parent_sign_in">Parent Sign in</string>
    <string name="title_activity_faculty_sign_in">Faculty Sign in</string>
    <string name="student_user_id">Student User ID</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password_click_here">Forgot Password? Click Here</string>
    <string name="user_id">User ID</string>
    <string name="faculty_user_id">Faculty User ID</string>
    <string name="imagecontentdescription">imagecontentDescription</string>
    <string name="student_login">Student Login</string>
    <string name="employee_login">Employee Login</string>
    <string name="other_users_login">Other Users Login</string>
    <string name="admin_login">Admin Login</string>
    <string name="title_activity_student_login">Student Login</string>
    <string name="title_activity_employee_login">Employee Login</string>
    <string name="title_activity_other_users_login">Others Sign in</string>
    <string name="title_activity_admin_login">Admin Login</string>
    <string name="student_email_id">Student Email-ID</string>
    <string name="login">Login</string>
    <string name="enter_email_id">Enter Email-ID</string>
    <string name="employee_email_id">Employee Email-ID</string>
    <string name="admin_email_id">Admin Email-ID</string>
    <string name="enter_your_email_id">Enter your Email-ID</string>
    <string name="submit">Submit</string>
    <string name="title_activity_student_navigation">Student Main Menu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_stud_attendance">Attendance</string>
    <string name="nav_stud_timetable">Time-Table</string>
    <string name="nav_stud_result">Result</string>
    <string name="nav_stud_notifications">Notifications</string>
    <string name="nav_stud_personalinformation">Personal Information</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_stud_logout">Logout</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Attendane</item>
        <item>Time-Table</item>
        <item>Result</item>
        <item>Notifications</item>
        <item>Personal Information</item>
        <item>Settings</item>
        <item>Logout</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="action_settings">Settings</string>
    <string name="other" />
    <string name="timetable">TimeTable</string>
    <string name="settings">Settings</string>
    <string name="personalinfo">PersonalInfo</string>
    <string name="result">result</string>
    <string name="attendance">Attendance</string>
</resources>
